--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@canopie-club/prisma-client": "^1.0.0-beta.10",
+    "@canopie-club/prisma-client": "^1.0.0-beta.12",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@prisma/client": "^5.18.0",
     "@types/bun": "latest",
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "sass": "^1.77.8"
-  }
+  },
+  "trustedDependencies": [
+    "@canopie-club/prisma-client"
+  ]
 }
