--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@canopie-club/prisma-client": "^1.0.0-beta.12",
+    "@nuxtjs/mdc": "^0.8.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@prisma/client": "^5.18.0",
     "@types/bun": "latest",
