--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:update": "tsx scripts/update-db.ts"
   },
   "dependencies": {
-    "@canopie-club/prisma-client": "^1.0.0-beta.12",
     "@nuxt/image": "^1.8.0",
     "@nuxthub/core": "^0.7.7",
     "@nuxtjs/mdc": "^0.8.3",
