--- a/package.json
+++ b/package.json
@@ -7,25 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "db:update": "tsx scripts/update-db.ts"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@canopie-club/toolbox": "github:Canopie-Club/canopie-toolbox",
     "@nuxt/image": "^1.8.0",
-    "@nuxthub/core": "^0.7.7",
     "@nuxtjs/mdc": "^0.8.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@prisma/client": "^5.18.0",
     "drizzle-orm": "^0.33.0",
     "emojilib": "^3.0.12",
     "markdown-it": "^14.1.0",
-    "nuxt": "^3.12.4",
-    "prisma": "^5.18.0",
+    "nuxt": "^3.13.0",
     "uuid": "^10.0.0",
     "vue": "latest"
   },
   "devDependencies": {
-    "@canopie-club/drizzle": "git+ssh://git@github.com/Canopie-Club/canopie-drizzle.git",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/bun": "latest",
@@ -34,10 +30,11 @@
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.24.2",
     "fs-extra": "^11.2.0",
-    "sass": "^1.77.8",
+    "node-emoji": "^2.1.3",
+    "sass": "^1.78.0",
     "tsx": "^4.19.0",
     "unenv": "^1.10.0",
-    "wrangler": "^3.72.2"
+    "wrangler": "^3.74.0"
   },
   "trustedDependencies": [
     "@canopie-club/prisma-client"
